<resources>
    <string name="app_name">Spaghetti</string>

    <string name="navigation_home">All</string>
    <string name="navigation_template">Templates</string>
    <string name="navigation_art">Ascii</string>
    <string name="navigation_shuffle">Shuffle</string>

    <string name="tab_category_recent">Recent</string>
    <string name="toolbar_search">Search</string>
    <string name="toolbar_submit_copypasta">Submit copypasta</string>
    <string name="toolbar_settings">Settings</string>
    <string name="copypasta_id">COPYPASTA_ID</string>
    <string name="no_search_results_found">No search results found</string>
    <string name="activity_settings_label">Settings</string>

    <!-- Preferences -->
    <string name="nsfw_key">NSFW_KEY</string>
    <string name="nsfw_title">Show NSFW content</string>
    <string name="nsfw_summary">Allow explicit posts to be shown</string>

    <!-- Submit copypasta form -->
    <string name="submit_title">Title (optional)</string>
    <string name="submit_content">Copypasta</string>
    <string name="submit_emoji">Emoji (only one)</string>
    <string name="submit_tags">Tags (comma-separated list, like: navy seal, angry, explicit…)</string>
    <string name="submit_nsfw">NSFW (explicit content)</string>
    <string name="submit_category_copypasta">Normal copypasta</string>
    <string name="submit_category_ascii">Ascii art</string>
    <string name="submit_category_emoji">Emoji art</string>
    <string name="submit_copypasta_type">Copypasta type</string>
    <string name="fab_copy_text_description">Click to copy text</string>
    <string name="send_request_description">Send request</string>

</resources>
