<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/vertical_text_spacing"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/vertical_text_spacing">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.AppCompat">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/submit_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/submit_title"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/submit_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/submit_content"
                    android:inputType="textMultiLine"
                    android:minLines="2"
                    app:hintEnabled="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/submit_emoji"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/submit_emoji"
                    android:maxLength="2"
                    android:maxLines="1"
                    app:hintEnabled="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/submit_tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/submit_tags"
                    android:inputType="textMultiLine"
                    app:hintEnabled="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/submit_nsfw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/vertical_text_spacing"
                android:layout_marginBottom="@dimen/vertical_text_spacing"
                android:checked="true"
                android:text="@string/submit_nsfw"
                android:textColor="@color/body_text_inverse" />

            <RadioGroup
                android:id="@+id/submit_category"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/vertical_text_spacing"
                android:checkedButton="@id/submit_category_copypasta"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit_copypasta_type" />

                <RadioButton
                    android:id="@+id/submit_category_copypasta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit_category_copypasta" />

                <RadioButton
                    android:id="@+id/submit_category_ascii"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit_category_ascii" />

                <RadioButton
                    android:id="@+id/submit_category_emoji"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit_category_emoji" />
            </RadioGroup>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:contentDescription="@string/send_request_description"
        android:src="@drawable/ic_send_white_24dp"
        app:fabSize="normal"
        app:useCompatPadding="true" />
</FrameLayout>